[gd_scene load_steps=2 format=3 uid="uid://miswaiky4uso"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xyyuv"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xyyuv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.868779, 1, 0.737153, 1)

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="StartFishingButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.0
offset_top = -157.0
offset_right = -217.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "Fishing Game"

[node name="StartChoppingButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -157.0
offset_right = 90.5
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "Chopping Game"

[node name="StartHarvestButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 216.0
offset_top = -157.0
offset_right = 397.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "Harvesting Game"

[node name="StartBuildingButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.25
offset_top = 53.0
offset_right = -63.25
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
text = "Building Game"

[node name="StartCookingButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 62.75
offset_top = 53.0
offset_right = 243.75
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
text = "Cooking Game"

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="Buttons/StartFishingButton" to="." method="_on_start_fishing_button_pressed"]
[connection signal="pressed" from="Buttons/StartChoppingButton" to="." method="_on_start_chopping_button_pressed"]
[connection signal="pressed" from="Buttons/StartHarvestButton" to="." method="_on_start_harvest_button_pressed"]
[connection signal="pressed" from="Buttons/StartBuildingButton" to="." method="_on_start_building_button_pressed"]
[connection signal="pressed" from="Buttons/StartCookingButton" to="." method="_on_start_cooking_button_pressed"]
